--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
         <meta charset="utf-8" />
         <title>Juste un document de test</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
 
     </HEAD>
 
